<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ph.eapesa.ussdpoc.MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:src="@drawable/voyagerlogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/main_button_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/main_button_label_poc"
        android:padding="32dp"

        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/main_button_dsmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"

        android:text="@string/main_button_label_dsmenu"
        android:padding="32dp"

        app:layout_constraintTop_toBottomOf="@+id/main_button_original"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/main_button_dynamicmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/main_button_label_dynamicmenu"
        android:padding="32dp"

        app:layout_constraintTop_toBottomOf="@+id/main_button_dsmenu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnknownId" />

</android.support.constraint.ConstraintLayout>
